--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -214,8 +214,8 @@
     <ClInclude Include="..\lib\NDevResource.h" />
     <ClInclude Include="..\lib\NDevSequence.h" />
     <ClInclude Include="..\lib\NDevSimulation.h" />
+    <ClInclude Include="..\lib\NDevTemplates.h" />
     <ClInclude Include="..\lib\NDevTypes.h" />
-    <ClInclude Include="NDevLIB.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
