--- a/NDevTEST/NDevTEST.vcxproj
+++ b/NDevTEST/NDevTEST.vcxproj
@@ -173,6 +173,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="unittestNDev.cpp" />
+    <ClCompile Include="unittestNDevDefinitions.cpp" />
     <ClCompile Include="unittestNDevMath.cpp" />
   </ItemGroup>
   <ItemGroup>
