--- a/NDevTEST/NDevTEST.vcxproj.filters
+++ b/NDevTEST/NDevTEST.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="unittestNDevMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unittestNDevDefinitions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
