--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -200,6 +200,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\NDev.h" />
+    <ClInclude Include="..\lib\NDevBytes.h" />
     <ClInclude Include="..\lib\NDevData.h" />
     <ClInclude Include="..\lib\NDevDefinitions.h" />
     <ClInclude Include="..\lib\NDevIterator.h" />
@@ -216,6 +217,7 @@
     <ClInclude Include="..\lib\NDevSimulation.h" />
     <ClInclude Include="..\lib\NDevTemplates.h" />
     <ClInclude Include="..\lib\NDevTypes.h" />
+    <ClInclude Include="..\lib\NDevWindow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
